// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Waf ApiKey rules should generate a rule for customRule 1`] = `
Array [
  Object {
    "Action": Object {
      "Allow": Object {},
    },
    "Name": "MyCustomRule",
    "Priority": undefined,
    "Statement": Object {
      "AndStatement": Object {
        "Statements": Array [
          Object {
            "GeoMatchStatement": Object {
              "CountryCodes": Array [
                "US",
              ],
            },
          },
          Object {
            "ByteMatchStatement": Object {
              "FieldToMatch": Object {
                "SingleHeader": Object {
                  "Name": "X-Api-key",
                },
              },
              "PositionalConstraint": "EXACTLY",
              "SearchString": Object {
                "Fn::GetAtt": Array [
                  "GraphQlApiMyKey",
                  "ApiKey",
                ],
              },
              "TextTransformations": Array [
                Object {
                  "Priority": 0,
                  "Type": "LOWERCASE",
                },
              ],
            },
          },
        ],
      },
    },
    "VisibilityConfig": Object {
      "CloudWatchMetricsEnabled": true,
      "MetricName": "MyCustomRule",
      "SampledRequestsEnabled": true,
    },
  },
]
`;

exports[`Waf ApiKey rules should generate a rule for disableIntrospection 1`] = `
Array [
  Object {
    "Action": Object {
      "Block": Object {},
    },
    "Name": "MyKeyDisableIntrospection",
    "Priority": undefined,
    "Statement": Object {
      "AndStatement": Object {
        "Statements": Array [
          Object {
            "ByteMatchStatement": Object {
              "FieldToMatch": Object {
                "Body": Object {},
              },
              "PositionalConstraint": "CONTAINS",
              "SearchString": "__schema",
              "TextTransformations": Array [
                Object {
                  "Priority": 0,
                  "Type": "COMPRESS_WHITE_SPACE",
                },
              ],
            },
          },
          Object {
            "ByteMatchStatement": Object {
              "FieldToMatch": Object {
                "SingleHeader": Object {
                  "Name": "X-Api-key",
                },
              },
              "PositionalConstraint": "EXACTLY",
              "SearchString": Object {
                "Fn::GetAtt": Array [
                  "GraphQlApiMyKey",
                  "ApiKey",
                ],
              },
              "TextTransformations": Array [
                Object {
                  "Priority": 0,
                  "Type": "LOWERCASE",
                },
              ],
            },
          },
        ],
      },
    },
    "VisibilityConfig": Object {
      "CloudWatchMetricsEnabled": true,
      "MetricName": "MyKeyDisableIntrospection",
      "SampledRequestsEnabled": true,
    },
  },
]
`;

exports[`Waf ApiKey rules should generate a rule for emptyStatements 1`] = `
Array [
  Object {
    "Action": Object {
      "Allow": Object {},
    },
    "Name": "rulesWithoutStatements",
    "Priority": undefined,
    "Statement": Object {
      "ByteMatchStatement": Object {
        "FieldToMatch": Object {
          "SingleHeader": Object {
            "Name": "X-Api-key",
          },
        },
        "PositionalConstraint": "EXACTLY",
        "SearchString": Object {
          "Fn::GetAtt": Array [
            "GraphQlApiMyKey",
            "ApiKey",
          ],
        },
        "TextTransformations": Array [
          Object {
            "Priority": 0,
            "Type": "LOWERCASE",
          },
        ],
      },
    },
    "VisibilityConfig": Object {
      "CloudWatchMetricsEnabled": true,
      "MetricName": "rulesWithoutStatements",
      "SampledRequestsEnabled": true,
    },
  },
]
`;

exports[`Waf ApiKey rules should generate a rule for throttle 1`] = `
Array [
  Object {
    "Action": Object {
      "Block": Object {},
    },
    "Name": "MyKeyThrottle",
    "Priority": undefined,
    "Statement": Object {
      "RateBasedStatement": Object {
        "AggregateKeyType": "IP",
        "ForwardedIPConfig": undefined,
        "Limit": 100,
        "ScopeDownStatement": Object {
          "ByteMatchStatement": Object {
            "FieldToMatch": Object {
              "SingleHeader": Object {
                "Name": "X-Api-key",
              },
            },
            "PositionalConstraint": "EXACTLY",
            "SearchString": Object {
              "Fn::GetAtt": Array [
                "GraphQlApiMyKey",
                "ApiKey",
              ],
            },
            "TextTransformations": Array [
              Object {
                "Priority": 0,
                "Type": "LOWERCASE",
              },
            ],
          },
        },
      },
    },
    "VisibilityConfig": Object {
      "CloudWatchMetricsEnabled": true,
      "MetricName": "MyKeyThrottle",
      "SampledRequestsEnabled": true,
    },
  },
]
`;

exports[`Waf ApiKey rules should generate a rule for throttleWithStatements 1`] = `
Array [
  Object {
    "Action": Object {
      "Block": Object {},
    },
    "Name": "Throttle rule with custom ScopeDownStatement",
    "Priority": undefined,
    "Statement": Object {
      "RateBasedStatement": Object {
        "AggregateKeyType": "IP",
        "ForwardedIPConfig": undefined,
        "Limit": 100,
        "ScopeDownStatement": Object {
          "AndStatement": Object {
            "Statements": Array [
              Object {
                "ByteMatchStatement": Object {
                  "FieldToMatch": Object {
                    "SingleHeader": Object {
                      "Name": "X-Foo",
                    },
                  },
                  "PositionalConstraint": "EXACTLY",
                  "SearchString": "Bar",
                  "TextTransformations": Array [
                    Object {
                      "Priority": 0,
                      "Type": "LOWERCASE",
                    },
                  ],
                },
              },
              Object {
                "ByteMatchStatement": Object {
                  "FieldToMatch": Object {
                    "SingleHeader": Object {
                      "Name": "X-Api-key",
                    },
                  },
                  "PositionalConstraint": "EXACTLY",
                  "SearchString": Object {
                    "Fn::GetAtt": Array [
                      "GraphQlApiMyKey",
                      "ApiKey",
                    ],
                  },
                  "TextTransformations": Array [
                    Object {
                      "Priority": 0,
                      "Type": "LOWERCASE",
                    },
                  ],
                },
              },
            ],
          },
        },
      },
    },
    "VisibilityConfig": Object {
      "CloudWatchMetricsEnabled": true,
      "MetricName": "Throttle rule with custom ScopeDownStatement",
      "SampledRequestsEnabled": true,
    },
  },
]
`;
